--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,4 +35,6 @@
 
   </div>
 
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script type="text/javascript" src="{{ "/js/images.js" | prepend: site.baseurl }}"></script>
 </footer>
