--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,3 +1,7 @@
+$base-font-family: 'Open Sans', sans-serif;
+$base-font-weight: 700;
+$bold-font-weight: 800;
+
 /**
  * Reset some basic elements
  */
@@ -36,8 +40,6 @@ ul, ol, dl, figure,
 %vertical-rhythm {
     margin-bottom: $spacing-unit / 2;
 }
-
-
 
 /**
  * Images
@@ -82,7 +84,7 @@ li {
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
-    font-weight: $base-font-weight;
+    font-weight: $bold-font-weight;
 }
 
 
