--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,39 +1,9 @@
 <footer class="site-footer">
 
-  <div class="wrapper">
-
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
-
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
-      </div>
-    </div>
-
-  </div>
+  &copy; {{ site.time | date: '%Y' }} <a href="{{ '/' | prepend: site.baseurl }}">House on a Hill</a>
+  &bull; <a href="{{ '/' | prepend: site.baseurl }}">Home</a>
+  &bull; <a href="{{ '/impressum' | prepend: site.baseurl }}">Impressum</a>
+  &bull; <a href="{{ '/datenschutz' | prepend: site.baseurl }}">Datenschutz</a>
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script type="text/javascript" src="{{ "/js/images.js" | prepend: site.baseurl }}"></script>
