--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -29,8 +29,26 @@ nav {
 }
 
 .section {
-	background-size: cover;
-	background-position: center center;
+	position: relative;
+
+	.sectionbgwrap {
+		clip: rect(0, auto, auto, 0);
+		top: 0px;
+		left: 0px;
+		height: 100%;
+		width: 100%;
+		position: absolute;
+		z-index: -1;
+	}
+
+	.sectionbg {
+		position: fixed;
+		height: 100%;
+		top: 0px;
+		width: 100%;
+		background-size: cover;
+		background-position: center center;
+	}
 
 	.block {
 		max-width: 90%;
@@ -39,7 +57,7 @@ nav {
 		font-size: 1.2em;
 		text-shadow: -1px 1px 0 rgba(255, 255, 255, 1);
 
-		p, h1, h2, h3, h4, h5, h6 {
+		p, h1, h2, h3, h4, h5, h6, .hoah-map {
 			max-width: 680px;
 			margin-left: auto;
 			margin-right: auto;
@@ -58,6 +76,65 @@ nav {
 	.subtile {
 		background: rgba(255, 255, 255, 0.5);
 	}
+}
+
+.events {
+	.quick {
+		width: 30%;
+		max-width: 220px;
+	}
+	ul {
+		list-style: none;
+	}
+	.date, h3 {
+		font-size: 1.56em;
+		line-height: 1;
+	}
+	.locationname {
+		font-weight: $bold-font-weight;
+		line-height: 1.7;
+	}
+	li {
+		margin-bottom: 2.5em;
+	}
+	.location {
+		max-width: 630px;
+		padding: 20px;
+		margin: 2em auto;
+		border: 5px solid black;
+		box-shadow: -1px 1px 0 white, -1px 1px 0 white inset;
+		span {
+			display: block;
+		}
+	}
+	.more {
+		color: $brand-color;
+		cursor: pointer;
+		display: block;
+		background: none;
+		border: none;
+		margin: 2.5em auto 0;
+		font-family: $base-font-family;
+		font-weight: $bold-font-weight;
+		font-size: 2em;
+		text-shadow: -1px 1px 0 rgba(255, 255, 255, 1);
+		&:hover, &:focus {
+			text-decoration: underline;
+			&:after {
+				text-decoration: none;
+			}
+		}
+		&:after {
+			display: block;
+			content: '▾';
+		}
+	}
+}
+
+.hoah-map {
+	display: block;
+	width: 100%;
+	height: 300px;
 }
 
 .logo-white {
@@ -80,6 +157,7 @@ nav {
 }
 
 .clear {
+	display: block;
 	clear: both;
 }
 
@@ -168,5 +246,10 @@ img.face {
 			display: block;
 			float: none;
 		}
+	}
+	.events .quick {
+		float: none;
+		width: 100%;
+		max-width: 100%;
 	}
 }
