feat(open-doors-medley): add player

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,7 @@
   &bull; <a href="{{ '/impressum' | prepend: site.baseurl }}">Impressum</a>
   &bull; <a href="{{ '/datenschutz' | prepend: site.baseurl }}">Datenschutz</a>
 
+  <script type="text/javascript" src="{{ "/js/vendor/modernizr-custom.js" | prepend: site.baseurl }}"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.js"></script>
   <script type="text/javascript" src="{{ "/js/app.js" | prepend: site.baseurl }}"></script>
 </footer>
