feat(ymom-video): move to own section

--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -94,6 +94,12 @@ h1.title {
 	display: none;
 }
 
+.ymom-video {
+	display: block;
+	margin: 0 auto;
+	border: 5px solid $white-color;
+}
+
 .events {
 	.quick {
 		width: 30%;
