feat: update band section
welcome Claus Ulrich

--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -246,19 +246,20 @@ h1.title {
 		}
 	}
 
-	&.claus, &.hannes {
+	&.claus, &.hannes, &.barbara {
 		h4 {
 			padding-top: 50px;
 		}
 	}
 
-	&.barbara {
+	&.rene {
 		h4 {
-			padding-top: 35px;
+			padding-top: 65px;
 		}
 	}
 
-	&.rene {
+	&.clausu {
+		margin-top: 0;
 		h4 {
 			padding-top: 65px;
 		}
