--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,6 @@
   &bull; <a href="{{ '/datenschutz' | prepend: site.baseurl }}">Datenschutz</a>
 
   <script type="text/javascript" src="{{ "/js/vendor/modernizr-custom.js" | prepend: site.baseurl }}"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.js"></script>
+  <script type="text/javascript" src="{{ "/js/vendor/angular.js" | prepend: site.baseurl }}"></script>
   <script type="text/javascript" src="{{ "/js/app.js" | prepend: site.baseurl }}"></script>
 </footer>
